# abeon-mail

./: .env.example  .gitignore  .npmrc  Cargo.toml  LICENSE  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: release.yml
crates/am-app/: Cargo.toml
crates/am-app/src/: commands.rs  events.rs  lib.rs  sink.rs  state.rs  tray.rs
crates/am-auth/: Cargo.toml  build.rs
crates/am-auth/src/: credentials.rs  endpoints.rs  lib.rs  provider.rs  test_keychain.rs
crates/am-auth/src/oauth/: client.rs  descriptor.rs  google.rs  manager.rs  microsoft.rs  mod.rs  pkce.rs
crates/am-core/: Cargo.toml
crates/am-core/src/: account.rs  error.rs  folder.rs  label.rs  lib.rs  meeting.rs  message.rs  notification.rs  outgoing.rs  rule.rs  search.rs  signature.rs  smart.rs  thread.rs  threading.rs
crates/am-mime/: Cargo.toml
crates/am-mime/src/: compose.rs  ical.rs  lib.rs  parse.rs  rfc2047.rs  sanitize.rs
crates/am-mime/tests/fixtures/: teams-invite.ics
crates/am-protocols/: Cargo.toml
crates/am-protocols/src/: error.rs  imap.rs  lib.rs  smtp.rs
crates/am-protocols/tests/: imap_greenmail.rs
crates/am-storage/: Cargo.toml
crates/am-storage/src/: accounts_repo.rs  attachments_repo.rs  db.rs  drafts_repo.rs  folders_repo.rs  labels_repo.rs  lib.rs  maintenance.rs  meeting_responses_repo.rs  messages_repo.rs  notifications_repo.rs  queue_repo.rs  rules_repo.rs  search_repo.rs  settings_repo.rs  signatures_repo.rs  smart_repo.rs  snooze_repo.rs  threads_repo.rs
crates/am-sync/: Cargo.toml
crates/am-sync/src/: auth.rs  compose.rs  engine.rs  events.rs  lib.rs  prefetch.rs  send.rs  service.rs
crates/am-sync/tests/: engine_greenmail.rs  send_greenmail.rs  sync_greenmail.rs
docs/: release.md
docs/superpowers/plans/: 2026-06-17-etap1-fundament.md  2026-06-17-etap2a-backend.md  2026-06-17-etap2b-frontend.md  2026-06-17-etap3a-sync-foundation.md  2026-06-17-etap3b-sync-engine.md  2026-06-17-etap3c-threading.md  2026-06-17-etap4a-send-pipeline.md  2026-06-17-etap4b-composer.md  2026-06-17-etap4c-drafts-inline.md  2026-06-17-etap5-interface-contract.md  2026-06-17-etap5a-oauth-core.md  2026-06-17-etap5b-smart-folders.md  2026-06-17-etap5c-account-management.md  2026-06-18-etap6-polish-ui-fidelity.md  2026-06-18-etap6a-appearance.md  2026-06-18-etap6b-shortcuts-command-palette.md  2026-06-19-etap6c-fts-search.md  2026-06-19-etap6d-labels.md  2026-06-19-etap6e-snooze.md  2026-06-19-etap7a-signatures.md  2026-06-19-etap7b-notifications.md  2026-06-19-etap7c-general-settings.md  2026-06-20-archive-delete.md  2026-06-20-etap7d-packaging.md  2026-06-20-etap7e-rules-filters.md  2026-06-20-mark-as-read.md  2026-06-21-folder-actions.md  2026-06-21-html-signature.md  2026-06-21-meeting-invites.md  2026-06-21-multi-select-bulk-actions.md  2026-06-21-offline-body-prefetch.md  2026-06-21-pinned-folders.md  2026-06-22-email-content-security-level.md  2026-06-22-sending-indicator.md  2026-06-23-quoted-history-collapse.md  2026-06-24-reply-tracking.md  2026-06-26-composer-rich-text-formatting.md  2026-06-29-message-list-filter-sort.md
docs/superpowers/specs/: 2026-06-17-abeonmail-design.md  2026-06-17-etap3-full-sync-design.md  2026-06-17-etap4-send-compose-design.md  2026-06-17-etap5-oauth-multiaccount-smartfolders-design.md  2026-06-18-etap6-polish-ui-fidelity-design.md  2026-06-18-etap6a-appearance-design.md  2026-06-18-etap6b-shortcuts-command-palette-design.md  2026-06-19-etap6c-fts-search-design.md  2026-06-19-etap6d-labels-design.md  2026-06-19-etap6e-snooze-design.md  2026-06-19-etap7a-signatures-design.md  2026-06-19-etap7b-notifications-design.md  2026-06-19-etap7c-general-settings-design.md  2026-06-20-archive-delete-design.md  2026-06-20-etap7d-packaging-design.md  2026-06-20-etap7e-rules-filters-design.md  2026-06-20-mark-as-read-design.md  2026-06-21-folder-actions-design.md  2026-06-21-html-signature-design.md  2026-06-21-meeting-invites-design.md  2026-06-21-multi-select-bulk-actions-design.md  2026-06-21-offline-body-prefetch-design.md  2026-06-21-pinned-folders-design.md  2026-06-21-system-tray-design.md  2026-06-22-email-content-security-level-design.md  2026-06-22-microsoft-oauth-integration-design.md  2026-06-22-select-next-after-removal-design.md  2026-06-22-sending-indicator-design.md  2026-06-22-smart-folders-visibility-design.md  2026-06-23-quoted-history-collapse-design.md  2026-06-24-instant-prefetch-on-new-mail-design.md  2026-06-24-reply-tracking-design.md  2026-06-26-composer-rich-text-formatting-design.md  2026-06-29-message-list-filter-sort-design.md
docs/templates/: AbeonMail Screens.html  AbeonMail.html
scripts/: sync-version.mjs  sync-version.test.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: AppShell.test.tsx  AppShell.tsx  QueryProvider.tsx  shell.css  store.advance.test.ts  store.selection.test.ts  store.test.ts  store.ts
src/features/accounts/: AddAccountWizard.test.tsx  AddAccountWizard.tsx  EndpointsForm.tsx
src/features/composer/: Composer.test.tsx  Composer.tsx  RecipientField.tsx  composer.css
src/features/labels/: LabelChips.css  LabelChips.test.tsx  LabelChips.tsx  LabelPicker.css  LabelPicker.test.tsx  LabelPicker.tsx
src/features/mailbox/: ErrorToast.css  ErrorToast.tsx  MailboxRail.css  MailboxRail.folder-actions.test.tsx  MailboxRail.pinned.test.tsx  MailboxRail.test.tsx  MailboxRail.tsx  RailContextMenu.test.tsx  RailContextMenu.tsx  RailDialogs.css  RailDialogs.test.tsx  RailDialogs.tsx  pinned.ts  (+5 more)
src/ipc/: bindings.ts  client.test.ts  client.ts  events.test.tsx  events.ts  mutations.test.tsx  queries.folder-actions.test.tsx  queries.pinned.test.tsx  queries.signatures.test.tsx  queries.snooze.test.tsx  queries.test.tsx  queries.ts  useSetSeen.test.tsx
src/shared/: contentSecurity.test.ts  contentSecurity.ts  quotedHistory.test.ts  quotedHistory.ts  smartFolders.test.ts  smartFolders.ts
src/test/: lucide-stub.js  setup.ts  version-consistency.test.ts
(+161 files in other folders)
