[workspace]
members = ["src-tauri", "crates/am-core", "crates/am-storage", "crates/am-app", "crates/am-mime", "crates/am-auth", "crates/am-protocols", "crates/am-sync"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.1"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "=0.0.12"
tauri = "2"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
mail-parser = "0.11.3"
ammonia = "4.1.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "io-util", "time"] }
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
futures = "0.3.32"
tokio-rustls = "0.26.4"
rustls = "0.23.40"
webpki-roots = "1.0.8"
testcontainers = "0.27.3"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "tokio1"] }
mail-builder = "0.4"
oauth2 = { version = "5", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
base64 = "0.22"
async-trait = "0.1"
rand = "0.8"
