[package]
name = "abeonmail"
version.workspace = true
edition.workspace = true
description = "AbeonMail desktop email client"
authors = ["Cyberstudio"]
license = "MIT"
homepage = "https://cyberstudio.pl"
repository = "https://github.com/cyberstudio/abeonmail"
default-run = "abeonmail"

[lib]
name = "abeonmail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "export_bindings"
path = "bin/export_bindings.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
specta-typescript = { workspace = true }
am-app = { path = "../crates/am-app" }
am-mime = { path = "../crates/am-mime" }
am-storage = { path = "../crates/am-storage" }
am-sync = { path = "../crates/am-sync" }
dotenvy = "0.15"
