[package]
name = "am-auth"
edition.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
specta.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
