[package]
name = "am-auth"
edition.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
specta.workspace = true
thiserror.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
