[package]
name = "am-protocols"
edition.workspace = true
version.workspace = true

[dependencies]
am-mime = { path = "../am-mime" }
thiserror.workspace = true
tokio.workspace = true
async-imap.workspace = true
futures.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
testcontainers.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "io-util", "time"] }
