[package]
name = "am-sync"
edition.workspace = true
version.workspace = true

[dependencies]
am-core = { path = "../am-core" }
am-storage = { path = "../am-storage" }
am-protocols = { path = "../am-protocols" }
am-mime = { path = "../am-mime" }
am-auth = { path = "../am-auth" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
testcontainers.workspace = true
async-imap.workspace = true
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "io-util", "time"] }
